k8s/calico-apiserver/deployments.apps.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "2"
    creationTimestamp: "2025-08-27T01:42:34Z"
    generation: 2
    labels:
      apiserver: "true"
      app.kubernetes.io/name: calico-apiserver
      k8s-app: calico-apiserver
    name: calico-apiserver
    namespace: calico-apiserver
    ownerReferences:
    - apiVersion: operator.tigera.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: APIServer
      name: default
      uid: 790cb36e-1494-48d4-b189-1ddf9fa3d0be
    resourceVersion: "876711"
    uid: 2c287eda-54d7-4628-9ea2-f7beed562dda
  spec:
    progressDeadlineSeconds: 600
    replicas: 2
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        apiserver: "true"
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          tigera-operator.hash.operator.tigera.io/calico-apiserver-certs: c522bd3dc439230f254fbce1a79c0c65c80e893a
        creationTimestamp: null
        labels:
          apiserver: "true"
          app.kubernetes.io/name: calico-apiserver
          k8s-app: calico-apiserver
        name: calico-apiserver
        namespace: calico-apiserver
      spec:
        affinity:
          podAntiAffinity:
            preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    k8s-app: calico-apiserver
                namespaces:
                - calico-apiserver
                topologyKey: kubernetes.io/hostname
              weight: 100
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    k8s-app: calico-apiserver
                namespaces:
                - calico-apiserver
                topologyKey: topology.kubernetes.io/zone
              weight: 100
        containers:
        - args:
          - --secure-port=5443
          - --tls-private-key-file=/calico-apiserver-certs/tls.key
          - --tls-cert-file=/calico-apiserver-certs/tls.crt
          env:
          - name: DATASTORE_TYPE
            value: kubernetes
          - name: KUBERNETES_SERVICE_HOST
            value: 10.96.0.1
          - name: KUBERNETES_SERVICE_PORT
            value: "443"
          - name: LOG_LEVEL
            value: info
          - name: MULTI_INTERFACE_MODE
            value: none
          image: docker.io/calico/apiserver:v3.30.2
          imagePullPolicy: IfNotPresent
          name: calico-apiserver
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /readyz
              port: 5443
              scheme: HTTPS
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 5
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            runAsGroup: 10001
            runAsNonRoot: true
            runAsUser: 10001
            seccompProfile:
              type: RuntimeDefault
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /calico-apiserver-certs
            name: calico-apiserver-certs
            readOnly: true
        dnsPolicy: ClusterFirst
        nodeSelector:
          kubernetes.io/os: linux
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        serviceAccount: calico-apiserver
        serviceAccountName: calico-apiserver
        terminationGracePeriodSeconds: 30
        tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
        volumes:
        - name: calico-apiserver-certs
          secret:
            defaultMode: 420
            secretName: calico-apiserver-certs
  status:
    availableReplicas: 2
    conditions:
    - lastTransitionTime: "2025-08-27T01:42:34Z"
      lastUpdateTime: "2025-08-27T01:44:49Z"
      message: ReplicaSet "calico-apiserver-5d8c5f665c" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2025-09-15T01:03:24Z"
      lastUpdateTime: "2025-09-15T01:03:24Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 2
    readyReplicas: 2
    replicas: 2
    updatedReplicas: 2
kind: List
metadata:
  resourceVersion: ""
