k8s/calico-apiserver/networkpolicies.networking.k8s.io.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    creationTimestamp: "2025-08-27T01:42:34Z"
    generation: 1
    name: allow-apiserver
    namespace: calico-apiserver
    ownerReferences:
    - apiVersion: operator.tigera.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: APIServer
      name: default
      uid: 790cb36e-1494-48d4-b189-1ddf9fa3d0be
    resourceVersion: "1093"
    uid: 78a5f311-d51c-4246-8c71-94e2b2616096
  spec:
    ingress:
    - ports:
      - port: 5443
        protocol: TCP
    podSelector:
      matchLabels:
        apiserver: "true"
    policyTypes:
    - Ingress
kind: List
metadata:
  resourceVersion: ""
