k8s/calico-apiserver/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2025-08-27T01:42:34Z"
    labels:
      k8s-app: tigera-api
    name: calico-api
    namespace: calico-apiserver
    ownerReferences:
    - apiVersion: operator.tigera.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: APIServer
      name: default
      uid: 790cb36e-1494-48d4-b189-1ddf9fa3d0be
    resourceVersion: "1077"
    uid: 31978022-3de9-4db0-a3ea-7496233e72c3
  spec:
    clusterIP: 10.111.107.53
    clusterIPs:
    - 10.111.107.53
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: apiserver
      port: 443
      protocol: TCP
      targetPort: 5443
    selector:
      apiserver: "true"
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
